--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='https://drive.google.com/open?id=1dQUv2MGbB5sK58FWihD-GsrXn0TMO_uV'>"
+excerpt: "Short description of portfolio item number 2 <br/><img src='https://drive.google.com/open?id=1dQUv2MGbB5sK58FWihD-GsrXn0TMO_uV&export=download'>"
 collection: portfolio
 ---
 
