--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,5 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='https://drive.google.com/uc?id=1dQUv2MGbB5sK58FWihD-GsrXn0TMO_uV&export=download'>"
+title: "梵魚寺 (범어사) 2019-10-03"
+excerpt: "梵魚寺 <br/><img src='https://drive.google.com/uc?id=1XNGXzfXChbfDAQs1yIa_t4tv0YXRic2A&export=download'>"
 collection: portfolio
 ---
-
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
