--- a/_pages/project.html
+++ b/_pages/project.html
@@ -10,11 +10,12 @@ author_profile: true
 				
 
 主持项目
-| 项目名称      | 资助来源 | 金额| 时间| 
+
+| 项目名称  | 资助来源 | 金额| 时间| 
 | ----------- | ----------- |----------- | ----------- |
-| *******      | 郑州大学青年人才企业合作创新团队支持计划      |10万| 2021~今|
-| *******     | 郑州大学青年教师专项基金项目      |20万| 2021~2023|
-| *******   | 郑州大学管理工程学院创新发展基金        |5万|2021~2023|
+| | 郑州大学青年人才企业合作创新团队支持计划      |10万| 2021~今|
+|  | 郑州大学青年教师专项基金项目      |20万| 2021~2023|
+| | 郑州大学管理工程学院创新发展基金        |5万| 2021~2023|
 
 {% if site.talkmap_link == true %}
 
