--- a/_pages/project.html
+++ b/_pages/project.html
@@ -4,10 +4,11 @@ title: ""
 permalink: /project/
 author_profile: true
 ---
+### Projects
 
 1. k-means++: a C++ implementation. [Project Page](http://ieyjzhou.github.io/CIEG/Project/KmeansPlusPlus/Kmeansplusplus.html) [Code Donwload](https://github.com/ieyjzhou/KmeansPlusPlus/archive/master.zip)
 1. k-continuous line drawing. [Project Page](https://ieyjzhou.github.io/CIEG/Project/KCLD/KCLD.html)
-				
+
 
 ### 主持项目
 
