--- a/_pages/project.html
+++ b/_pages/project.html
@@ -12,21 +12,32 @@ author_profile: true
 
 
 
-### 主持项目
-
-| 项目名称     | 资助来源                                     | 金额         | 时间        | 
-| ----------- | -------------------------------------------- | ----------- | ----------- |
-|             | 郑州大学青年人才企业合作创新团队支持计划         | 10万        | 2021~今     |
-|             | 郑州大学青年教师专项基金项目                    | 20万        | 2021~2023   |
-|             | 郑州大学管理工程学院创新发展基金                | 5万         | 2021~2023   |
-
-### Table 1
-
-| Entry            | Item   |                                                              |
-| --------         | ------ | ------------------------------------------------------------ |
-| [John Doe](#)    | 2016   | Description of the item in the list                          |
-| [Jane Doe](#)    | 2019   | Description of the item in the list                          |
-| [Doe Doe](#)     | 2022   | Description of the item in the list                          |
+<table>
+    <tr>
+        <td>项目名称</td>
+        <td>资助来源</td>
+        <td>金额</td>
+        <td>时间</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>郑州大学青年人才企业合作创新团队支持计划</td>
+        <td>10万</td>
+        <td>2021~今</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>郑州大学青年教师专项基金项目</td>
+        <td>20万</td>
+        <td>2021~2023</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td>郑州大学管理工程学院创新发展基金</td>
+        <td>5万</td>
+        <td>2021~2023</td>
+    </tr>
+</table>
 
 
 {% if site.talkmap_link == true %}
