--- a/_pages/project.html
+++ b/_pages/project.html
@@ -14,26 +14,28 @@ author_profile: true
 <br>
 主持项目 <br>
 <table>
+    
     <tr>
-        <td>项目名称</td>
-        <td>资助来源</td>
-        <td>金额</td>
-        <td>时间</td>
+        <td>主持</td>
+        <td>国家自然基金委青年科学基金</td>
+        <td>30万</td>
+        <td>2023~2025</td>
     </tr>
+    
     <tr>
-        <td>************</td>
+        <td>主持</td>
         <td>郑州大学青年人才企业合作创新团队支持计划</td>
         <td>10万</td>
         <td>2021~今</td>
     </tr>
     <tr>
-        <td>************</td>
+        <td>主持</td>
         <td>郑州大学青年教师专项基金项目</td>
         <td>20万</td>
         <td>2021~2023</td>
     </tr>
     <tr>
-        <td>************</td>
+        <td>主持</td>
         <td>郑州大学管理工程学院创新发展基金</td>
         <td>5万</td>
         <td>2021~2023</td>
