--- a/_pages/project.html
+++ b/_pages/project.html
@@ -17,26 +17,30 @@ author_profile: true
     
     <tr>
         <td>主持</td>
-        <td>国家自然基金委青年科学基金</td>
+        <td>青年科学基金</td>
+        <td>国家自然基金委</td>
         <td>30万</td>
         <td>2023~2025</td>
     </tr>
     
     <tr>
         <td>主持</td>
-        <td>郑州大学青年人才企业合作创新团队支持计划</td>
+        <td>青年人才企业合作创新团队支持计划</td>
+        <td>郑州大学</td>
         <td>10万</td>
         <td>2021~今</td>
     </tr>
     <tr>
         <td>主持</td>
-        <td>郑州大学青年教师专项基金项目</td>
+        <td>青年教师专项基金项目</td>
+        <td>郑州大学</td>
         <td>20万</td>
         <td>2021~2023</td>
     </tr>
     <tr>
         <td>主持</td>
-        <td>郑州大学管理工程学院创新发展基金</td>
+        <td>创新发展基金</td>
+        <td>郑州大学管理工程学院</td>
         <td>5万</td>
         <td>2021~2023</td>
     </tr>
